# robustness-gym

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  brainstorm.py  environment.yml  pyproject.toml  requirements.txt  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
dashboard/: demo-robust.py  integration.py  robustness-report-integration.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: Cached Operations.ipynb  Introduction-Jason.ipynb  Introduction.ipynb  NLI.ipynb  mwoz_slice_example.ipynb
examples/models/: BERT_DST_Picklist.py  dual_encoder_ranking.py
examples/snli_100.dataset/: dataset_info.json  state.json
examples/utils/: dataloader_dm.py  dataloader_dst.py  dataloader_nlg.py  dataloader_nlu.py  utils_dailydialog.py  utils_function.py  utils_general.py  utils_multiwoz.py  utils_schema.py
fast_influence_functions/: .gitignore  Dockerfile  README.md  requirements.txt  run_glue.py
fast_influence_functions/attack_utils/: textattacks_mnli_model.py
fast_influence_functions/cluster/: docker.run.cpu.sh  docker.run.gpu.sh  docker.update.sh  (+3 more)
landingPage/: package-lock.json
robustness_gym/: __init__.py  bench.py  cached_ops.py  constants.py  dataset.py  dataset_to_task.py  identifier.py  model.py  report.py  slice.py  slicemaker.py  slicer.py  task.py  tools.py
robustnessgym/: __init__.py  constants.py  dataset.py  dataset_to_task.py  decorators.py  identifier.py  model.py  report.py  slice.py  storage.py  task.py  tools.py  version.py
tests/: testbeds.py
(+272 files in other folders)
