[tool.poetry]
name = "robustnessgym"
version = "0.0.1"
description = "Robustness Gym is an evaluation toolkit for natural language processing."
authors = ["Stanford Hazy Research <kgoel@cs.stanford.edu>", "Salesforce Research <nazneen.rajani@salesforce.com>"]
maintainers = ["Karan Goel <kgoel@cs.stanford.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.0"
dill = "^0.3.3"
tqdm = "^4.27.0"
datasets = "^1.1.3"
pyahocorasick = "^1.4.0"
nlpaug = "^1.1.1"
Cython = "^0.29.21"
cytoolz = "^0.11.0"
transformers = "^4.0.0"
progressbar = "^2.5"
nltk = "^3.5"
textblob = "^0.15.3"
spacy = "^2.3.5"
multiprocess = "^0.70.11"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
allennlp = "^1.3.0"
allennlp-models = "^1.3.0"
pytorch-lightning = "^1.1.2"
kaleido = "0.1.0"
fastBPE = "^0.1.0"
omegaconf = "^2.0.5"
hydra-core = "^1.0.4"
jupyterlab = "^3.0.0"
textattack = "^0.2.15"
plotly = "^4.14.1"
ipywidgets = "^7.6.2"
stanza = "^1.1.1"
rouge-score = "^0.0.4"
semver = "^2.13.0"
jsonlines = "^1.2.0"
tensorflow = "^2.3.0"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
